# FindMyScholarship

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  baseline.json  baseline_v2.json  crawler_agent.py  find_my_scholarship.py  gradioooo.py  note.ipynb  postdoc_check.json  pyproject.toml  railway.toml  requirements.txt  run2.json  scholarship_manager.py  school_domain_agent.py  school_domain_finder.py  schorlarship_agent.py  schorlarship_finder.py  schorlaship_manager.py  test.py  vibvecoding.py
cache/: findmyscholarship.db  findmyscholarship.db-shm  findmyscholarship.db-wal
eval/: golden_dataset.py  harness.py
mcp_server/: server.py
mcp_server/sources/: grants_gov.py  jobs_ac_uk.py  nih.py  opportunity_desk.py  ukri.py
models/: analyzer_model.py  crawler_model.py  domain_finder_model.py
scholarship_agents/: analyzer_agent.py  crawler_agent.py  crawler_agent2.py  explorer_agent.py  school_domain_agent.py  schorlarship_agent.py
tests/: test_mcp_sources.py
utils/: analyzer.py  cache.py  constants.py  crawler.py  find_domain.py  keyword_extractor.py  logger.py  remove_duplicate_schools.py  university_db.py
utils/crawl/: __init__.py  _constants.py  _utils.py  engine.py  fetcher.py  formatter.py  models.py  scorer.py  seeds.py  tools.py
