[project]
name = "findmyschorlarship"
version = "0.1.0"
description = "An intelligent AI assistant that helps students find scholarships and funding opportunities using OpenAI Agents and Gradio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "openai-agents>=0.4.2",
    "google-search-results>=2.4.2",
]
dev = [
    "ruff>=0.5.0",     # Fast linter/formatter
    "black>=24.0.0",   # Formatter
    "pytest>=8.0.0",   # Testing
    "ipykernel>=6.29.0"
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.uv]
managed = true
index-url = "https://pypi.org/simple"
